Bugfixes. Stable Beta Version
Bugfixes. Stable Beta Version

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -2,52 +2,54 @@
 	"@metadata": {
 		"authors": [
 			"DominikMartin",
-			"BenjaminHosenfeld"
+			"BenjaminHosenfeld",
+			"Tobias Weller"
 		]
 	},
 	"semantictextannotator": "Semantic Text Annotator",
-	"annotator-desc": "Annotator Beschreibung",
-	"annotator-i18n-welcome": "Willkommen bei der Lokalisierungs- und Internationalisierungsdatei der Programmerweiterung Annotator.",
-	"annotator-special-title": "Semantic Text Annotator",
-	"annotator-special-intro": "Willkommen auf der Spezialseite der Erweiterung „Semantic Text Annotator“.",
-	"annotate-button-text": "Annotieren",
-	"annotate-button-desc": "Klicken Sie hier um den Artikel annotieren zu können.",
-	"annotate-repair-button-text": "Annotations-Reparatur",
-	"annotate-repair-button-desc": "Klicken Sie hier um veränderte Annotationen zu reparieren.",
-	"annotate-repair-notification": "Es konnten nicht alle Annotationen korrekt zugeordnet werden. Bitte starten Sie den Annotations-Reparatur Modus.",
-	"annotate-icon-desc": "Annotator Status",
-	"annotate-welcome-message": "Annotator Modus gestartet...",
-	"annotate-godbye-message": "Annotator Modus beendet...",
-	"install": "Installation",
-	"autogenerate-summary": "Diese Seite wurde automatisch generiert durch die Semantic Text Annotator Extension.",
-	"install-description": "Bitte klicken Sie den Installieren Button bevor Sie die Extension verweden.",
-	"install-success": "Installation erfolgreich abgeschlossen.",
-	"install-button-submit": "Installieren...",
-	"helloworld": "Hallo Welt",
-	"category-pageform-assignment": "Kategorie PageForm Verknüpfung",
-	"category-pageform-assignment-description":"Hier können Sie die von der Extension verwendeten Kategorien festlegen. Dafür muss jede Kategorie mit einem PageForm Formular verknüpft werden und eine Farbe ausgewählt werden.",
-	"category": "Kategorie",
-	"pageforms-form": "PageForms Formular",
-	"color": "Farbe",
-	"add": "Hinzufügen",
-	"delete": "Löschen",
-	"loading": "Lädt...",
-	"red": "rot",
-	"yellow": "gelb",
-	"green": "grün",
-	"blue": "blau",
-	"grey": "grau",
-	"annotation-main-page-description": "Diese Seite zeigt alle Anotationen des Artikels",
-	"annotations": "Annotationen",
-	"repair-welcome-title": "Welcome to Repair Mode",
-	"repair-welcome-text": "In the following steps you are able to correct the moved annotation positions.",
-	"repair-annotation-info-title": "Annotation Info",
-	"repair-annotation-info-text": "After clicking Repair you have to select the annotations new position.",
-	"annotation-article-link": "Annotation Article Page",
-	"repair-done-title": "Done!",
-	"repair-done-text": "Annotations position is updated.",
-	"repair": "Repair",
-	"skip": "Skip",
-	"repair-all-done-title": "Repair Mode finished",
-	"repair-all-done-text": "Now you will be redirected to the article page."
+	"sta-desc": "Ermöglicht das hinzufügen von Annotation zu wiki artikeln.",
+	"sta-i18n-welcome": "Willkommen bei der Lokalisierungs- und Internationalisierungsdatei der Programmerweiterung Annotator.",
+	"sta-special-title": "Semantic Text Annotator",
+	"sta-special-intro": "Willkommen auf der Spezialseite der Erweiterung „Semantic Text Annotator“.",
+	"sta-button-text": "Annotieren",
+	"sta-button-desc": "Klicken Sie hier um den Artikel annotieren zu können.",
+	"sta-repair-button-text": "Annotations-Reparatur",
+	"sta-repair-button-desc": "Klicken Sie hier um veränderte Annotationen zu reparieren.",
+	"sta-repair-notification": "Es konnten nicht alle Annotationen korrekt zugeordnet werden. Bitte starten Sie den Annotations-Reparatur Modus.",
+	"sta-icon-desc": "Annotator Status",
+	"sta-welcome-message": "Annotator Modus gestartet...",
+	"sta-godbye-message": "Annotator Modus beendet...",
+	"sta-install": "Installation",
+	"sta-autogenerate-summary": "Diese Seite wurde automatisch generiert durch die Semantic Text Annotator Extension.",
+	"sta-install-description": "Bitte klicken Sie den Installieren Button bevor Sie die Extension verweden.",
+	"sta-install-success": "Installation erfolgreich abgeschlossen. Bitte Laden Sie die Seite neu.",
+	"sta-install-button-submit": "Installieren...",
+	"sta-category-pageform-assignment": "Kategorie PageForm Verknüpfung",
+	"sta-category-pageform-assignment-description":"Hier können Sie die von der Extension verwendeten Kategorien festlegen. Dafür muss jede Kategorie mit einem PageForm Formular verknüpft werden und eine Farbe ausgewählt werden.",
+	"sta-category": "Kategorie",
+	"sta-pageforms-form": "PageForms Formular",
+	"sta-color": "Farbe",
+	"sta-add": "Hinzufügen",
+	"sta-delete": "Löschen",
+	"sta-loading": "Lädt...",
+	"sta-red": "rot",
+	"sta-yellow": "gelb",
+	"sta-green": "grün",
+	"sta-blue": "blau",
+	"sta-grey": "grau",
+	"sta-main-page-description": "Diese Seite zeigt alle Anotationen des Artikels",
+	"sta-annotations": "Annotationen",
+	"sta-please-install": "Sie haben noch nicht die Erweiterung installiert. Bitte gehen Sie dazu auf die Spezielle Seiten.",
+	"sta-repair-welcome-title": "Welcome to Repair Mode",
+	"sta-repair-welcome-text": "In the following steps you are able to correct the moved annotation positions.",
+	"sta-repair-info-title": "Annotation Info",
+	"sta-repair-info-text": "After clicking Repair you have to select the annotations new position.",
+	"sta-article-link": "Annotation Article Page",
+	"sta-repair-done-title": "Done!",
+	"sta-repair-done-text": "Annotations position is updated.",
+	"sta-repair": "Repair",
+	"sta-skip": "Skip",
+	"sta-repair-all-done-title": "Repair Mode finished",
+	"sta-repair-all-done-text": "Now you will be redirected to the article page.",
+	"specialpages-group-annotation": "Annotation"
 }
