Added Reinstall Button

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -12,6 +12,10 @@
 	"sta-special-title": "Semantic Text Annotator",
 	"sta-special-intro": "Willkommen auf der Spezialseite der Erweiterung „Semantic Text Annotator“.",
 	"sta-button-text": "Annotieren",
+	"sta-reinstall-header": "Neuinstallation",
+	"sta-reinstall-text": "Durch drücken des Neuinstallation Knopfes wird diese Extension neu installiert. Das hat zur Folge, dass Vorlage, Formular, Attribute und Kategorien, welche in Beziehung mit dieser extension sich befinden neu angelegt werden.\n\nFolgende Attribute werden neu angelegt:\n*Attribut:Annotation_of\n*Attribut:Annotation_code\n*Attribut:AnnotationComment\n*Attribut:LastModificationDate\n*Attribut:LastModificationUser\n*Attribut:AnnotationMetadata\n\nFolgende Kategorien werden neu angelegt:\n*Kategorie:Annotation\n*Kategorie:TextAnnotation\n\nZusätzlich werden folgende beide Seiten überschrieben:\n*Vorlage:TextAnnotation\n*Formular:TextAnnotation\n\nEbenso werden die Verlinkungen mit bestehenden Page Forms gelöscht. Die Forms selber bleiben erhalten.",
+	"sta-request-reinstall": "Verknüpfungen zu existierenden Page Forms werden gelöscht. In Verbindung mit dieser extension sich befindende Vorlage, Formular, Attribute und Kategorien, werden überschrieben.",
+	"sta-confirm-reinstall": "Ja",
 	"sta-button-desc": "Klicken Sie hier um den Artikel annotieren zu können.",
 	"sta-repair-button-text": "Annotations-Reparatur",
 	"sta-repair-button-desc": "Klicken Sie hier um veränderte Annotationen zu reparieren.",
@@ -21,7 +25,7 @@
 	"sta-godbye-message": "Annotator Modus beendet...",
 	"sta-install": "Installation",
 	"sta-autogenerate-summary": "Diese Seite wurde automatisch generiert durch die Semantic Text Annotator Extension.",
-	"sta-install-description": "Bitte klicken Sie den Installieren Button bevor Sie die Extension verweden.",
+	"sta-install-description": "Bitte klicken Sie den Installieren Button bevor Sie die Extension verweden. Hierbei wird Form:TextAnnotation und Template:TextAnnotation generiert.",
 	"sta-install-success": "Installation erfolgreich abgeschlossen. Bitte Laden Sie die Seite neu.",
 	"sta-install-button-submit": "Installieren...",
 	"sta-category-pageform-assignment": "Kategorie PageForm Verknüpfung",
